# mmp-gdb

./: .gitignore  CMakeLists.txt  README.md  prj.conf  sysbuild.conf
Anchor_A1/: .ninja_log  .vscode-nrf-connect.json  build.ninja  build_info.yml  build_info.yml.bak  domains.yaml  mmp-gdb_sysbuild_cache.txt.tmp  zephyr_modules.txt  zephyr_settings.txt
Anchor_A1/Kconfig/: Kconfig.sysbuild.modules
Anchor_A1/mmp-gdb/: .ninja_deps  .ninja_log  CMakeCache.tmp  build.ninja  build_info.yml  compile_commands.json
Anchor_A1/zephyr/: .config-trace.json  .config-trace.pickle
Anchor_A2/: .ninja_log  .vscode-nrf-connect.json  build.ninja  build_info.yml  build_info.yml.bak  domains.yaml  mmp-gdb_sysbuild_cache.txt  pm.config
Anchor_A2/Kconfig/: Kconfig.shield
Anchor_A2/mmp-gdb/: .ninja_deps  .ninja_log  CMakeCache.tmp  build.ninja  build_info.yml  compile_commands.json  zephyr_settings.txt
Anchor_A2/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle
Anchor_A3/: .ninja_log  .vscode-nrf-connect.json  build.ninja  build_info.yml  build_info.yml.bak  domains.yaml  mmp-gdb_sysbuild_cache.txt
Anchor_A3/Kconfig/: Kconfig.modules  kconfig_module_dirs.env
Anchor_A3/mmp-gdb/: .ninja_deps  .ninja_log  CMakeCache.tmp  build.ninja  build_info.yml  compile_commands.json
MMP_GDB_build/: .ninja_log  .vscode-nrf-connect.json  build.ninja  build_info.yml  build_info.yml.bak  domains.yaml  mmp-gdb_sysbuild_cache.txt
src/: anchor.py  main.c  node_config.h  ring_distances.c  ring_distances.h  ring_exchange.c  ring_exchange.h
(+88 files in other folders)
